created user login and signup

--- a/views/createproducts.ejs
+++ b/views/createproducts.ejs
@@ -1,8 +1,9 @@
 <%- include('./partials/header') %> <% if(success.length>0){ %>
 <div
-  class="absolute top-5 left-1/2 -translate-x-1/2 -translate-y-1/2 p-3 rounded-md bg-blue-500"
+  class="error absolute top-5 left-[40%] p-3 bg-green-100 border border-green-500 text-green-600 flex items-center gap-10"
 >
-  <span class="inline-block mt-1 mb-1 text-white"> <%= success %> </span>
+  <span class="inline-block"> <%= success %> </span>
+  <i class="fa-solid fa-xmark inline-block cursor-pointer"></i>
 </div>
 <% } %>
 
