--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,16 @@
 <%- include('./partials/header') %> <% if(error.length>0){ %>
 <div
-  class="absolute top-5 left-1/2 -translate-x-1/2 -translate-y-1/2 p-3 rounded-md bg-red-500"
+  class="error absolute top-5 left-[40%] p-3 bg-red-100 border border-red-500 text-red-500 flex items-center gap-10"
 >
-  <span class="inline-block mt-1 mb-1 text-white"> <%= error %> </span>
+  <span class="inline-block"> <%= error %> </span>
+  <i class="fa-solid fa-xmark inline-block cursor-pointer"></i>
+</div>
+<% } %> <% if(success.length>0){ %>
+<div
+  class="error absolute top-5 left-[40%] p-3 bg-green-100 border border-green-500 text-green-600 flex items-center gap-10"
+>
+  <span class="inline-block"> <%= success %> </span>
+  <i class="fa-solid fa-xmark inline-block cursor-pointer"></i>
 </div>
 <% } %>
 <div class="w-full h-screen flex">
@@ -12,24 +20,27 @@
         Welcome to <span class="text-blue-400 font-bold italic">Scatch</span>
       </h3>
       <h4 class="text-3xl mb-5">Create Your Account</h4>
-      <form autocomplete="off" action="/users/register" method="post">
+      <form autocomplete="off" action="/user/register" method="post">
         <input
           class="bg-zinc-100 block w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200 outline-none"
           type="text"
           placeholder="Full Name"
           name="fullname"
+          required
         />
         <input
           class="bg-zinc-100 block w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200 outline-none"
           type="email"
           placeholder="Email"
           name="email"
+          required
         />
         <input
           class="bg-zinc-100 block w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200 outline-none"
           type="password"
           placeholder="Password"
           name="password"
+          required
         />
         <input
           class="px-5 rounded-full py-2 mt-2 bg-blue-500 text-white outline-none"
@@ -42,18 +53,20 @@
   <div class="w-1/2 flex items-center justify-center h-screen">
     <div class="w-full px-32">
       <h4 class="text-3xl mb-5">Login</h4>
-      <form autocomplete="off" action="/users/login" method="post">
+      <form autocomplete="off" action="/user/login" method="post">
         <input
           class="block bg-zinc-100 w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200 outline-none"
           type="email"
           placeholder="Email"
           name="email"
+          required
         />
         <input
           class="block bg-zinc-100 w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200 outline-none"
           type="password"
           placeholder="Password"
           name="password"
+          required
         />
         <input
           class="px-5 block rounded-full py-2 mt-2 bg-blue-500 text-white outline-none"
