--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,9 +8,17 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="">
     <nav class="w-full fixed top-0 left-0 px-10 py-5 font-bold italic">
-      <h3 class="text-5xl text-blue-400">Scatch</h3>
+      <h3 class="text-5xl text-blue-400"><a href="/">Scatch</a></h3>
     </nav>
+  
