--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,7 +1,13 @@
 <%- include('./partials/header') %>
 <div class="w-full h-screen flex items-start px-20 py-20 gap-10">
   <div class="w-[30%] rounded-md overflow-hidden">
-    <div class="w-full h-80 bg-yellow-500"></div>
+    <div class="w-full h-80 bg-yellow-500">
+      <img
+        class="h-full w-full object-cover"
+        src="/images/users/default.png"
+        alt=""
+      />
+    </div>
     <div class="w-full flex justify-between px-5 py-4">
       <h3 class="text-2xl">Clinge Bag</h3>
       <div class="flex items-center gap-2">
