solved add to cart error

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,8 +27,11 @@
       <div class="flex gap-10">
         <a href="/">Home</a>
         <a href="/shop">Shop</a>
-        <a href="/cart">Cart</a>
+        <a href="/cart"
+          ><i class="fa-solid fa-bag-shopping text-xl text-blue-500"></i
+        ></a>
         <a href="/user/logout" class="text-red-500">Logout</a>
       </div>
       <% } %>
     </nav>
+  
